--- a/styles/style.module.css
+++ b/styles/style.module.css
@@ -138,7 +138,7 @@
 .blogArticle {
   padding: 0 20px;
 }
-.blogArticle img {
+/* .blogArticle img {
   height: 260px;
   max-height: 22vh;
   width: 100%;
@@ -159,7 +159,7 @@
 }
 .blogArticle video:hover {
   filter: none;
-}
+} */
 
 .pageNumber {
   display: flex;
